import "ucar/nc2/grib/collection/gribCollection2.proto";

option java_package = "ucar.nc2.grib.collection";
option java_outer_classname = "PartitionCollectionProto";

///////////////////////////////////////////////////////////////////////////
message PartitionVariable {
  required uint32 groupno = 1;
  required uint32 varno = 2;
  required uint32 flag = 3;
  required uint32 partno = 4;

  // optionally keep stats
  optional uint32 ndups = 8;
  optional uint32 nrecords = 9;
  optional uint32 missing = 10;
}

extend Variable {
  repeated PartitionVariable partition = 100;
}

message Partition {
  required string name = 1;       // name is used in TDS - eg the subdirectory when generated by TimePartitionCollections
  required string filename = 2;   // the gribCollection.ncx3 file, reletive to gc.
  optional string directory = 3;  // top directory NOT USED
  optional uint64 lastModified = 4;
  optional int64 length = 5;
  optional int64 partitionDate = 6;  // partition date added 11/25/14
}

extend GribCollection {
  repeated Partition partitions = 100;
  required bool isPartitionOfPartitions = 101;
  repeated uint32 run2part = 102;       // masterRuntime index to partition index
}

//  cd c:/dev/github/thredds/grib/src/main/java
//  protoc --proto_path=. --java_out=. ucar/nc2/grib/collection/partitionCollection.proto